# SenecaFinalProject

./: CMakeLists.txt  README.md  config.cpp  config.hpp  config.json  gui.cpp  gui.hpp  main.cpp  proximConfig.cpp  sensor.cpp  sensor.hpp  temp_logic.cpp  temp_logic.hpp
